Правки в секции с выполненными работами

--- a/assets/html/partials/examples.html
+++ b/assets/html/partials/examples.html
@@ -1,48 +1,107 @@
 <section class="section">
 	<div class="examples">
-		<div class="examples__inner">
-			<div class="examples__info-card info-card info-card--column">
-				<div class="info-card__inner">
-					<span class="info-card__subtitle info-card__subtitle--uppercase">
-						Работы
-					</span>
-					<h1 class="info-card__title title title--light-color">
-						Выполненные работы
-					</h1>
+
+		<div class="examples__wrap">
+			<div class="examples__inner">
+				<div class="examples__info-card info-card info-card--column">
+					<div class="info-card__inner">
+						<span class="info-card__subtitle info-card__subtitle--uppercase">
+							Работы
+						</span>
+						<h1 class="info-card__title title title--light-color">
+							Выполненные работы
+						</h1>
+					</div>
+
+					<p class="info-card__text info-card__text--max-width text text--light-color">
+						Небольшая часть нашей деятельности в сфере промышленного альпинизма и арбористики.
+					</p>
 				</div>
 
-				<p class="info-card__text info-card__text--max-width text text--light-color">
-					Небольшая часть нашей деятельности в сфере промышленного альпинизма и арбористики.
-				</p>
+				<div class="swiper-button-prev swiper-button-prev--examples"></div>
+				<div class="swiper-button-next swiper-button-next--examples"></div>
 			</div>
-		</div>
 
-		<div class="examples__swiper swiper">
-			<div class="swiper-wrapper">
+			<div class="examples__swiper swiper">
+				<div class="swiper-wrapper">
 
-				<div class="swiper-slide">
-					<div class="examples__card examples-card">
-						<img class="examples-card__img" src="@img/examples/img-1.webp"
-							alt="Очистка крыши от снега и наледи в лицее п. Челюскинский">
-						<div class="examples-card__info">
-							<h3 class="examples-card__subtitle">
-								Проальпинизм
-							</h3>
-							<h2 class="examples-card__title title">
-								<a class="examples-card__link link-reset" href="#/">
-									Очистка крыши от снега и наледи в лицее п. Челюскинский
-								</a>
-							</h2>
+					<div class="swiper-slide">
+						<div class="examples__card examples-card">
+							<img class="examples-card__img" src="@img/examples/img-1.webp"
+								alt="Очистка крыши от снега и наледи в лицее п. Челюскинский">
+							<div class="examples-card__info">
+								<h3 class="examples-card__subtitle">
+									<a class="examples-card__link link-reset" href="#">
+										Проальпинизм
+									</a>
+								</h3>
+								<h2 class="examples-card__title title">
+									<a class="examples-card__link link-reset" href="#/">
+										Очистка крыши от снега и наледи в лицее п. Челюскинский
+									</a>
+								</h2>
+							</div>
 						</div>
 					</div>
+					<div class="swiper-slide">
+						<div class="examples__card examples-card">
+							<img class="examples-card__img" src="@img/examples/img-1.webp"
+								alt="Очистка крыши от снега и наледи в лицее п. Челюскинский">
+							<div class="examples-card__info">
+								<h3 class="examples-card__subtitle">
+									<a class="examples-card__link link-reset" href="#">
+										Проальпинизм
+									</a>
+								</h3>
+								<h2 class="examples-card__title title">
+									<a class="examples-card__link link-reset" href="#/">
+										Очистка крыши от снега и наледи в лицее п. Челюскинский
+									</a>
+								</h2>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="examples__card examples-card">
+							<img class="examples-card__img" src="@img/examples/img-1.webp"
+								alt="Очистка крыши от снега и наледи в лицее п. Челюскинский">
+							<div class="examples-card__info">
+								<h3 class="examples-card__subtitle">
+									<a class="examples-card__link link-reset" href="#">
+										Проальпинизм
+									</a>
+								</h3>
+								<h2 class="examples-card__title title">
+									<a class="examples-card__link link-reset" href="#/">
+										Очистка крыши от снега и наледи в лицее п. Челюскинский
+									</a>
+								</h2>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="examples__card examples-card">
+							<img class="examples-card__img" src="@img/examples/img-1.webp"
+								alt="Очистка крыши от снега и наледи в лицее п. Челюскинский">
+							<div class="examples-card__info">
+								<h3 class="examples-card__subtitle">
+									<a class="examples-card__link link-reset" href="#">
+										Проальпинизм
+									</a>
+								</h3>
+								<h2 class="examples-card__title title">
+									<a class="examples-card__link link-reset" href="#/">
+										Очистка крыши от снега и наледи в лицее п. Челюскинский
+									</a>
+								</h2>
+							</div>
+						</div>
+					</div>
+
+
 				</div>
 
-
 			</div>
-
-			<div class="swiper-button-prev"></div>
-			<div class="swiper-button-next"></div>
-
 		</div>
 
 		<a class="team__link link link-reset" href="#/">Смотреть все</a>
