--- a/assets/scss/chunk/_application.scss
+++ b/assets/scss/chunk/_application.scss
@@ -1,7 +1,7 @@
 .application {
 	border-radius: 10px;
 	padding: 30px;
-	background: var(--bg-color);
+	background: #312f30;
 
 	&__title {
 		margin: 0 auto;
