--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,7 +12,7 @@
 @use './chunk/services';
 @use './chunk/schemes';
 
-// @use './chunk/examples';
+@use './chunk/examples';
 @use './chunk/team';
 @use './chunk/technic';
 @use './chunk/letters';
