Правка дизайна в услугах

--- a/assets/html/partials/services.html
+++ b/assets/html/partials/services.html
@@ -4,88 +4,47 @@
 			<h2 class="services__title title title--center">
 				Наши услуги
 			</h2>
-		</div>
 
-		<div class="services__tabs services-tabs">
-			<div class="services-tabs__header">
-				<div class="services-tabs__header-item active">Популярные услуги</div>
-				<div class="services-tabs__header-item">Ремонт на высоте</div>
-				<div class="services-tabs__header-item">Фасадные работы</div>
-				<div class="services-tabs__header-item">Высотная покраска</div>
-				<div class="services-tabs__header-item">Удаление деревьев</div>
-				<div class="services-tabs__header-item">Монтажные работы на высоте</div>
-				<div class="services-tabs__header-item">Клининговые работы</div>
-				<div class="services-tabs__header-item">Аренда спецтехники</div>
-			</div>
-			<div class="services-tabs__content">
-				<div class="services-tabs__content-item">
-
-					<div class="services__card services-card" style="background-image: url('@img/services/img-1.webp');">
-						<h3 class="services-card__title">
-							Ремонт водонапорных башен
-						</h3>
-						<div class="services-card__links">
-							<a class="services-card__link link-reset" href="#/">
-								Ремонт водонапорных башен
-							</a>
-							<div class="services-card__inner">
-								<a class="link link--arrow link-reset" href="#/">Подробнее</a>
-								<a class="link link--arrow link-reset" href="#/">Быстрый заказ</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="services__card services-card" style="background-image: url('@img/services/img-1.webp');">
-						<h3 class="services-card__title">
-							Ремонт дымовых труб котельных
-						</h3>
-						<div class="services-card__links">
-							<a class="services-card__link link-reset" href="#/">
-								Ремонт дымовых труб котельных
-							</a>
-							<div class="services-card__inner">
-								<a class="link link--arrow link-reset" href="#/">Подробнее</a>
-								<a class="link link--arrow link-reset" href="#/">Быстрый заказ</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="services__card services-card" style="background-image: url('@img/services/img-1.webp');">
-						<h3 class="services-card__title">
-							Утепление фасадов
-						</h3>
-						<div class="services-card__links">
-							<a class="services-card__link link-reset" href="#/">
-								Утепление фасадов
-							</a>
-							<div class="services-card__inner">
-								<a class="link link--arrow link-reset" href="#/">Подробнее</a>
-								<a class="link link--arrow link-reset" href="#/">Быстрый заказ</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="services__card services-card" style="background-image: url('@img/services/img-1.webp');">
-						<h3 class="services-card__title">
-							Герметизация межпанельных швов
-						</h3>
-						<div class="services-card__links">
-							<a class="services-card__link link-reset" href="#/">
-								Герметизация межпанельных швов
-							</a>
-							<div class="services-card__inner">
-								<a class="link link--arrow link-reset" href="#/">Подробнее</a>
-								<a class="link link--arrow link-reset" href="#/">Быстрый заказ</a>
-							</div>
-						</div>
-					</div>
-
+			<div class="services__tabs services-tabs">
+				<div class="services-tabs__header">
+					<div class="services-tabs__header-item active">Популярные услуги</div>
+					<div class="services-tabs__header-item">Ремонт на высоте</div>
+					<div class="services-tabs__header-item">Фасадные работы</div>
+					<div class="services-tabs__header-item">Высотная покраска</div>
+					<div class="services-tabs__header-item">Удаление деревьев</div>
+					<div class="services-tabs__header-item">Монтажные работы на высоте</div>
+					<div class="services-tabs__header-item">Клининговые работы</div>
+					<div class="services-tabs__header-item">Аренда спецтехники</div>
 				</div>
-				<div class="services-tabs__content-item">2</div>
-				<div class="services-tabs__content-item">3</div>
-				<div class="services-tabs__content-item">4</div>
-				<div class="services-tabs__content-item">5</div>
+				<div class="services-tabs__content">
+					<div class="services-tabs__content-item">
+
+						<div class="services__card services-card">
+							<div class="services-card__price">От 40&#8381;/м&#178;</div>
+							<div class="services-card__img">
+								<img src="@img/services/img-1.webp" alt="Ремонт водонапорных башен">
+							</div>
+							<div class="services-card__links">
+								<h3 class="services-card__title">
+									<a class="link-reset" href="#/">
+										Ремонт водонапорных башен
+									</a>
+								</h3>
+								<div class="services-card__inner">
+									<a class="link services-card__link link-reset" href="#/">Подробнее</a>
+									<a class="link link-reset" href="#/">Быстрый заказ</a>
+								</div>
+							</div>
+						</div>
+
+					</div>
+					<div class="services-tabs__content-item">2</div>
+					<div class="services-tabs__content-item">3</div>
+					<div class="services-tabs__content-item">4</div>
+					<div class="services-tabs__content-item">5</div>
+				</div>
 			</div>
+
 		</div>
 	</div>
 </section>
