Перенос стилей с WP

--- a/assets/html/partials/technic.html
+++ b/assets/html/partials/technic.html
@@ -22,79 +22,81 @@
 				</p>
 			</div>
 
-			<div class="technic__swiper swiper">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<div class="technic__card main-card">
-							<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
-							<div class="main-card__info">
-								<h3 class="main-card__title">
-									<a class="link-reset" href="#/">
-										АО «НПОИТ»
+			<div class="technic__wrap">
+				<div class="technic__swiper swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="technic__card main-card">
+								<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
+								<div class="main-card__info">
+									<h3 class="main-card__title">
+										<a class="link-reset" href="#/">
+											АО «НПОИТ»
+										</a>
+									</h3>
+									<a class="main-card__link link-reset" href="#/">
+										Подробнее
 									</a>
-								</h3>
-								<a class="main-card__link link-reset" href="#/">
-									Подробнее
-								</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<div class="technic__card main-card">
+								<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
+								<div class="main-card__info">
+									<h3 class="main-card__title">
+										<a class="link-reset" href="#/">
+											АО «НПОИТ»
+										</a>
+									</h3>
+
+									<a class="main-card__link link-reset" href="#/">
+										Подробнее
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<div class="technic__card main-card">
+								<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
+								<div class="main-card__info">
+									<h3 class="main-card__title">
+										<a class="link-reset" href="#/">
+											АО «НПОИТ»
+										</a>
+									</h3>
+
+									<a class="main-card__link link-reset" href="#/">
+										Подробнее
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<div class="technic__card main-card">
+								<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
+								<div class="main-card__info">
+									<h3 class="main-card__title">
+										<a class="link-reset" href="#/">
+											АО «НПОИТ»
+										</a>
+									</h3>
+									<a class="main-card__link link-reset" href="#/">
+										Подробнее
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="swiper-slide">
-						<div class="technic__card main-card">
-							<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
-							<div class="main-card__info">
-								<h3 class="main-card__title">
-									<a class="link-reset" href="#/">
-										АО «НПОИТ»
-									</a>
-								</h3>
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-button-next"></div>
 
-								<a class="main-card__link link-reset" href="#/">
-									Подробнее
-								</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="swiper-slide">
-						<div class="technic__card main-card">
-							<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
-							<div class="main-card__info">
-								<h3 class="main-card__title">
-									<a class="link-reset" href="#/">
-										АО «НПОИТ»
-									</a>
-								</h3>
-
-								<a class="main-card__link link-reset" href="#/">
-									Подробнее
-								</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="swiper-slide">
-						<div class="technic__card main-card">
-							<img class="technic__img" src="@img/technic/img-1.webp" alt="АО 'НПОИТ'">
-							<div class="main-card__info">
-								<h3 class="main-card__title">
-									<a class="link-reset" href="#/">
-										АО «НПОИТ»
-									</a>
-								</h3>
-								<a class="main-card__link link-reset" href="#/">
-									Подробнее
-								</a>
-							</div>
-						</div>
-					</div>
+					<div class="swiper-pagination"></div>
 				</div>
-
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
-				<div class="swiper-pagination"></div>
 			</div>
 
 			<a class="team__link link link-reset" href="#/">Смотреть все</a>
