--- a/assets/html/partials/reviews.html
+++ b/assets/html/partials/reviews.html
@@ -17,96 +17,108 @@
 				</p>
 			</div>
 
-			<div class="reviews__swiper swiper">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<div class="reviews__card reviews-card">
-							<p class="reviews-card__text text">
-								На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								На проделанные
-								работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-							</p>
-							<div class="reviews-card__inner">
-								<div class="reviews-card__info">
-									<span class="reviews-card__author">Иванов Иван</span>
-									<span class="reviews-card__city">Москва</span>
+			<div class="reviews__wrap">
+				<div class="reviews__swiper swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="reviews__card reviews-card">
+								<p class="reviews-card__text text">
+									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
+									Рекомендуем.
+									На проделанные
+									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
+								</p>
+								<div class="reviews-card__inner">
+									<div class="reviews-card__info">
+										<span class="reviews-card__author">Иванов Иван</span>
+										<span class="reviews-card__city">Москва</span>
+									</div>
+									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
+									</div>
 								</div>
-								<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');"></div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<div class="reviews__card reviews-card">
+								<p class="reviews-card__text text">
+									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
+									Рекомендуем.
+									На проделанные
+									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
+								</p>
+								<div class="reviews-card__inner">
+									<div class="reviews-card__info">
+										<span class="reviews-card__author">Иванов Иван</span>
+										<span class="reviews-card__city">Москва</span>
+									</div>
+									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="reviews__card reviews-card">
+								<p class="reviews-card__text text">
+									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
+									Рекомендуем.
+									На проделанные
+									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
+								</p>
+								<div class="reviews-card__inner">
+									<div class="reviews-card__info">
+										<span class="reviews-card__author">Иванов Иван</span>
+										<span class="reviews-card__city">Москва</span>
+									</div>
+									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="reviews__card reviews-card">
+								<p class="reviews-card__text text">
+									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
+									Рекомендуем.
+									На проделанные
+									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
+								</p>
+								<div class="reviews-card__inner">
+									<div class="reviews-card__info">
+										<span class="reviews-card__author">Иванов Иван</span>
+										<span class="reviews-card__city">Ярославль</span>
+									</div>
+									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<div class="reviews__card reviews-card">
+								<p class="reviews-card__text text">
+									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
+									Рекомендуем.
+									На проделанные
+									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
+								</p>
+								<div class="reviews-card__inner">
+									<div class="reviews-card__info">
+										<span class="reviews-card__author">Полина</span>
+										<span class="reviews-card__city">Екатеринбург</span>
+									</div>
+									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="swiper-slide">
-						<div class="reviews__card reviews-card">
-							<p class="reviews-card__text text">
-								На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								На проделанные
-								работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-							</p>
-							<div class="reviews-card__inner">
-								<div class="reviews-card__info">
-									<span class="reviews-card__author">Иванов Иван</span>
-									<span class="reviews-card__city">Москва</span>
-								</div>
-								<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');"></div>
-							</div>
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="reviews__card reviews-card">
-							<p class="reviews-card__text text">
-								На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								На проделанные
-								работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-							</p>
-							<div class="reviews-card__inner">
-								<div class="reviews-card__info">
-									<span class="reviews-card__author">Иванов Иван</span>
-									<span class="reviews-card__city">Москва</span>
-								</div>
-								<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');"></div>
-							</div>
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="reviews__card reviews-card">
-							<p class="reviews-card__text text">
-								На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								На проделанные
-								работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-							</p>
-							<div class="reviews-card__inner">
-								<div class="reviews-card__info">
-									<span class="reviews-card__author">Иванов Иван</span>
-									<span class="reviews-card__city">Ярославль</span>
-								</div>
-								<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');"></div>
-							</div>
-						</div>
-					</div>
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-button-next"></div>
 
-					<div class="swiper-slide">
-						<div class="reviews__card reviews-card">
-							<p class="reviews-card__text text">
-								На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								На проделанные
-								работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-							</p>
-							<div class="reviews-card__inner">
-								<div class="reviews-card__info">
-									<span class="reviews-card__author">Полина</span>
-									<span class="reviews-card__city">Екатеринбург</span>
-								</div>
-								<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');"></div>
-							</div>
-						</div>
-					</div>
+					<div class="swiper-pagination"></div>
 				</div>
-
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
-				<div class="swiper-pagination"></div>
 			</div>
 
 			<a class="team__link link link-reset" href="#/">Смотреть всех</a>
