--- a/assets/scss/chunk/_header.scss
+++ b/assets/scss/chunk/_header.scss
@@ -216,3 +216,62 @@
 		}
 	}
 }
+
+.menu-item {
+	position: relative;
+}
+
+.menu-item-has-children {
+	::after {
+		content: '';
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 50px;
+		visibility: hidden;
+	}
+
+	&:hover::after {
+		visibility: visible;
+	}
+}
+
+.sub-menu .menu-item-has-children::after {
+	left: -20px;
+	width: calc(100% + 40px);
+}
+
+.sub-menu,
+.sub-sub-menu {
+	position: absolute;
+	top: 48px;
+	border-top: 1px solid var(--accent-color);
+	padding: 0 20px;
+	min-width: 100%;
+	background-color: var(--light-color);
+	opacity: 0;
+	visibility: hidden;
+	transition:
+		visibility var(--time),
+		opacity var(--time);
+}
+
+.sub-sub-menu {
+	right: -20px;
+	top: -1px;
+	transform: translateX(100%);
+}
+
+.menu-item:hover .sub-menu,
+.sub-menu-item:hover .sub-sub-menu {
+	opacity: 1;
+	visibility: visible;
+}
+
+.sub-menu-link {
+	display: inline-block;
+	border-bottom: 1px solid var(--gray-color);
+	padding: 15px 0;
+	width: 100%;
+}
