--- a/assets/scss/chunk/_reviews.scss
+++ b/assets/scss/chunk/_reviews.scss
@@ -6,7 +6,12 @@
 		margin-bottom: 70px;
 	}
 
+	&__wrap {
+		position: relative;
+	}
+
 	&__swiper {
+		position: static;
 		margin-bottom: 50px;
 	}
 }
