--- a/assets/scss/chunk/_team.scss
+++ b/assets/scss/chunk/_team.scss
@@ -50,6 +50,7 @@
 	max-width: 370px;
 
 	&__img {
+		max-height: 370px;
 		transition: scale 0.5s;
 	}
 
@@ -134,7 +135,7 @@
 		overflow: hidden;
 		border-radius: 6px;
 		width: 100%;
-		max-width: 35%;
+		max-width: 50%;
 
 		@media (width <= 991px) {
 			max-width: 100%;
@@ -142,7 +143,7 @@
 	}
 
 	&__content {
-		max-width: 35%;
+		max-width: 50%;
 
 		@media (width <= 991px) {
 			max-width: 100%;
