--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -482,7 +482,7 @@
 			bottom: 100%;
 			z-index: 5;
 			width: 100%;
-			min-height: 70px;
+			min-height: 69px;
 			background-image: url('@img/icons/sprite.svg#letters-decor');
 			background-position: center;
 			background-size: cover;
@@ -546,6 +546,7 @@
 
 .second-card {
 	position: relative;
+	display: flex;
 	min-height: 260px;
 	max-height: 260px;
 
