Настройка шрифтовых иконок

--- a/assets/html/partials/contacts.html
+++ b/assets/html/partials/contacts.html
@@ -22,7 +22,7 @@
 
 				<div class="contacts-info__list">
 					<div class="contacts-info__item contact">
-						<div class="contact__icon fa-location-dot">
+						<div class="contact__icon fa-solid fa-location-dot">
 						</div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Адрес</h3>
@@ -33,7 +33,7 @@
 					</div>
 
 					<div class="contacts-info__item contact">
-						<div class="contact__icon fa-envelope">
+						<div class="contact__icon fa-solid fa-envelope">
 						</div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Адрес</h3>
@@ -44,7 +44,7 @@
 					</div>
 
 					<div class="contacts-info__item contact">
-						<div class="contact__icon fa-phone-volume"></div>
+						<div class="contact__icon fa-solid fa-phone-volume"></div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Телефоны</h3>
 							<div class="contact__inner">
@@ -59,7 +59,7 @@
 					</div>
 
 					<div class="contacts-info__item contact">
-						<div class="contact__icon fa-clock"></div>
+						<div class="contact__icon fa-solid fa-clock"></div>
 						<div class="contact__texts">
 							<h3 class="contact__title">Адрес</h3>
 							<address class="contact__text">
@@ -77,17 +77,17 @@
 				<a class="contacts-info__link link-reset" href="#/">Публичная оферта</a>
 
 				<div class="socials">
-					<a class="socials__link socials__link--wa fa-whatsapp link-reset" href="#/" target="_blank">
+					<a class="socials__link socials__link--wa fa-brands fa-whatsapp link-reset" href="#/" target="_blank">
 					</a>
-					<a class="socials__link socials__link--tg fa-telegram link-reset" href="#/" target="_blank">
+					<a class="socials__link socials__link--tg fa-brands fa-telegram link-reset" href="#/" target="_blank">
 					</a>
-					<a class="socials__link socials__link--vk fa-vk link-reset" href="#/" target="_blank">
+					<a class="socials__link socials__link--vk fa-brands fa-vk link-reset" href="#/" target="_blank">
 					</a>
-					<a class="socials__link socials__link--tt fa-tiktok link-reset" href="#/" target="_blank">
+					<a class="socials__link socials__link--tt fa-brands fa-tiktok link-reset" href="#/" target="_blank">
 					</a>
-					<a class="socials__link socials__link--yt fa-youtube link-reset" href="#/" target="_blank">
+					<a class="socials__link socials__link--yt fa-brands fa-youtube link-reset" href="#/" target="_blank">
 					</a>
-					<a class="socials__link socials__link--ig fa-instagram link-reset" href="#/" target="_blank">
+					<a class="socials__link socials__link--ig fa-brands fa-instagram link-reset" href="#/" target="_blank">
 					</a>
 				</div>
 
