--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -7,7 +7,7 @@
 			<div class="header__top">
 				<div class="header__contacts header-contacts">
 					<div class="header-contacts__item">
-						<a class="header-contacts__link link-reset" href="tel:+74993430609">
+						<a class="header-contacts__link fa-solid fa-phone link-reset" href="tel:+74993430609">
 							+7 (499) 343-06-09
 						</a>
 					</div>
@@ -24,17 +24,17 @@
 				</div>
 				<div class="header__top-right">
 					<div class="header__socials socials">
-						<a class="socials__link socials__link--wa fa-whatsapp link-reset" href="#/" target="_blank">
+						<a class="socials__link socials__link--wa fa-brands fa-whatsapp link-reset" href="#/" target="_blank">
 						</a>
-						<a class="socials__link socials__link--tg fa-telegram link-reset" href="#/" target="_blank">
+						<a class="socials__link socials__link--tg fa-brands fa-telegram link-reset" href="#/" target="_blank">
 						</a>
-						<a class="socials__link socials__link--vk fa-vk link-reset" href="#/" target="_blank">
+						<a class="socials__link socials__link--vk fa-brands fa-vk link-reset" href="#/" target="_blank">
 						</a>
-						<a class="socials__link socials__link--tt fa-tiktok link-reset" href="#/" target="_blank">
+						<a class="socials__link socials__link--tt fa-brands fa-tiktok link-reset" href="#/" target="_blank">
 						</a>
-						<a class="socials__link socials__link--yt fa-youtube link-reset" href="#/" target="_blank">
+						<a class="socials__link socials__link--yt fa-brands fa-youtube link-reset" href="#/" target="_blank">
 						</a>
-						<a class="socials__link socials__link--ig fa-instagram link-reset" href="#/" target="_blank">
+						<a class="socials__link socials__link--ig fa-brands fa-instagram link-reset" href="#/" target="_blank">
 						</a>
 					</div>
 					<a class="header__link link link-reset" href="#">Заказать звонок</a>
