--- a/assets/scss/chunk/_header.scss
+++ b/assets/scss/chunk/_header.scss
@@ -1,7 +1,8 @@
 .header {
 	position: static;
-	z-index: 10;
+	z-index: 30;
 	width: 100%;
+	box-shadow: 0 0 25px 0 rgb(0 0 0 / 10%);
 	background-color: var(--light-color);
 
 	&__container {
@@ -196,20 +197,15 @@
 		}
 	}
 
-	&__icon {
-		width: 15px;
-		height: 15px;
-
-		use {
-			fill: var(--accent-color);
-		}
-	}
-
 	&__link {
 		font-weight: 500;
 		font-size: 14px;
 		color: var(--gray-text-color);
 		transition: color var(--time);
+
+		&::before {
+			margin-right: 5px;
+		}
 
 		&:hover {
 			color: var(--dark-color);
