Правки на странице команды

--- a/assets/html/partials/team-member-page.html
+++ b/assets/html/partials/team-member-page.html
@@ -33,46 +33,48 @@
 	</div>
 </section>
 
-<div class="skills">
-	<div class="container">
-		<h2 class="skills__title">Навыки</h2>
+<section class="section section-skills">
+	<div class="skills">
+		<div class="container">
+			<h2 class="skills__title">Навыки</h2>
 
-		<div class="skills__wrap">
-			<div class="skills__item">
-				<h3 class="skills__name">
-					Работа с бензопилой
-				</h3>
-				<div class="skills__progress skills-progress">
-					<span class="skills-progress__value">99</span>
+			<div class="skills__wrap">
+				<div class="skills__item">
+					<h3 class="skills__name">
+						Работа с бензопилой
+					</h3>
+					<div class="skills__progress skills-progress">
+						<span class="skills-progress__value">99</span>
+					</div>
 				</div>
-			</div>
 
-			<div class="skills__item">
-				<h3 class="skills__name">
-					Высотные работы
-				</h3>
-				<div class="skills__progress skills-progress">
-					<span class="skills-progress__value">92</span>
+				<div class="skills__item">
+					<h3 class="skills__name">
+						Высотные работы
+					</h3>
+					<div class="skills__progress skills-progress">
+						<span class="skills-progress__value">92</span>
+					</div>
 				</div>
-			</div>
 
-			<div class="skills__item">
-				<h3 class="skills__name">
-					Работа с техникой
-				</h3>
-				<div class="skills__progress skills-progress">
-					<span class="skills-progress__value">100</span>
+				<div class="skills__item">
+					<h3 class="skills__name">
+						Работа с техникой
+					</h3>
+					<div class="skills__progress skills-progress">
+						<span class="skills-progress__value">100</span>
+					</div>
 				</div>
-			</div>
 
-			<div class="skills__item">
-				<h3 class="skills__name">
-					Работа с ручным инструментом
-				</h3>
-				<div class="skills__progress skills-progress">
-					<span class="skills-progress__value">97</span>
+				<div class="skills__item">
+					<h3 class="skills__name">
+						Работа с ручным инструментом
+					</h3>
+					<div class="skills__progress skills-progress">
+						<span class="skills-progress__value">97</span>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
