--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -169,6 +169,10 @@
 		background-repeat: no-repeat;
 	}
 
+	&-skills {
+		background-color: #ebebeb;
+	}
+
 	&--dark-bg {
 		background-image: url('@img/general/bg.webp');
 		background-position: center;
