--- a/assets/html/partials/reviews.html
+++ b/assets/html/partials/reviews.html
@@ -22,6 +22,16 @@
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="reviews__card reviews-card">
+								<div class="reviews-card__info">
+									<span class="reviews-card__author">Иванов Иван</span>
+									<div class="reviews-card__rating reviews-card-rating" data-star="2">
+										<span class="reviews-card-rating__star fa-regular fa-star"></span>
+										<span class="reviews-card-rating__star fa-regular fa-star"></span>
+										<span class="reviews-card-rating__star fa-regular fa-star"></span>
+										<span class="reviews-card-rating__star fa-regular fa-star"></span>
+										<span class="reviews-card-rating__star fa-regular fa-star"></span>
+									</div>
+								</div>
 								<p class="reviews-card__text text">
 									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
 									Рекомендуем.
@@ -29,9 +39,9 @@
 									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
 								</p>
 								<div class="reviews-card__inner">
-									<div class="reviews-card__info">
-										<span class="reviews-card__author">Иванов Иван</span>
-										<span class="reviews-card__city">Москва</span>
+									<div class="reviews-card__details reviews-card-details">
+										<span class="reviews-card-details__city">Москва</span>
+										<span class="reviews-card-details__date">12 января 2024</span>
 									</div>
 									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
 									</div>
@@ -39,79 +49,6 @@
 							</div>
 						</div>
 
-						<div class="swiper-slide">
-							<div class="reviews__card reviews-card">
-								<p class="reviews-card__text text">
-									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
-									Рекомендуем.
-									На проделанные
-									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								</p>
-								<div class="reviews-card__inner">
-									<div class="reviews-card__info">
-										<span class="reviews-card__author">Иванов Иван</span>
-										<span class="reviews-card__city">Москва</span>
-									</div>
-									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="reviews__card reviews-card">
-								<p class="reviews-card__text text">
-									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
-									Рекомендуем.
-									На проделанные
-									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								</p>
-								<div class="reviews-card__inner">
-									<div class="reviews-card__info">
-										<span class="reviews-card__author">Иванов Иван</span>
-										<span class="reviews-card__city">Москва</span>
-									</div>
-									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="reviews__card reviews-card">
-								<p class="reviews-card__text text">
-									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
-									Рекомендуем.
-									На проделанные
-									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								</p>
-								<div class="reviews-card__inner">
-									<div class="reviews-card__info">
-										<span class="reviews-card__author">Иванов Иван</span>
-										<span class="reviews-card__city">Ярославль</span>
-									</div>
-									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="reviews__card reviews-card">
-								<p class="reviews-card__text text">
-									На проделанные работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход.
-									Рекомендуем.
-									На проделанные
-									работы нам дали гарантию. Молодцы ребята. Серьезный и ответственный подход. Рекомендуем.
-								</p>
-								<div class="reviews-card__inner">
-									<div class="reviews-card__info">
-										<span class="reviews-card__author">Полина</span>
-										<span class="reviews-card__city">Екатеринбург</span>
-									</div>
-									<div class="reviews-card__service" style="background-image: url('@img/general/google-map.webp');">
-									</div>
-								</div>
-							</div>
-						</div>
 					</div>
 
 					<div class="swiper-button-prev"></div>
