--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -264,6 +264,12 @@
 				transform: translateX(0);
 			}
 		}
+
+		&--center {
+			display: block;
+			margin: 0 auto;
+			max-width: fit-content;
+		}
 	}
 }
 
