Вёрстка модального окна

--- a/assets/html/partials/footer.html
+++ b/assets/html/partials/footer.html
@@ -171,3 +171,43 @@
 		</div>
 	</div>
 </footer>
+
+<div class="modal" id="modal">
+	<div class="modal__body">
+		<div class="modal__content">
+			<a class="modal__close close-modal" href="#header">X</a>
+			<div class="consultation">
+				<div class="consultation__info">
+					<div class="consultation__img">
+						<img src="@img/team/img-1.webp" alt="">
+					</div>
+					<span class="consultation__name">
+						Мария
+					</span>
+					<span class="consultation__post">
+						Менеджер
+					</span>
+					<div class="consultation__links">
+						<a class="consultation__link link-reset" href="tel:79265131833">
+							+7 (926) 513-18-33
+						</a>
+						<a class="consultation__link link-reset" href="mailto:pro-alpinizm@mail.ru">
+							pro-alpinizm@mail.ru
+						</a>
+					</div>
+				</div>
+				<div class="consultation__wrap">
+					<h2 class="consultation__title title">
+						Консультация специалиста
+					</h2>
+					<p class="consultation__text text">
+						Наш менеджер перезвонит вам в ближайшее время
+					</p>
+					<form class="consultation__form" action="#">
+
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
