--- a/assets/html/partials/header.html
+++ b/assets/html/partials/header.html
@@ -37,7 +37,7 @@
 						<a class="socials__link socials__link--ig fa-brands fa-instagram link-reset" href="#/" target="_blank">
 						</a>
 					</div>
-					<a class="header__link link link-reset" href="#">Заказать звонок</a>
+					<a class="header__link link link-reset modal-link" href="#modal">Заказать звонок</a>
 				</div>
 			</div>
 
