--- a/assets/html/partials/hero.html
+++ b/assets/html/partials/hero.html
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 			<div class="hero__form">Форма</div>
-			<a class="hero__link link link-reset" href="#/">
+			<a class="hero__link link link-reset modal-link" href="#modal">
 				Заказать звонок
 			</a>
 		</div>
