--- a/assets/scss/chunk/_letters.scss
+++ b/assets/scss/chunk/_letters.scss
@@ -15,3 +15,20 @@
 		margin-bottom: 50px;
 	}
 }
+
+.letters-page {
+	&__cards {
+		display: grid;
+		align-items: flex-start;
+		grid-template-columns: repeat(4, 1fr);
+		gap: 70px 30px;
+
+		@media (width <= 992px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@media (width <= 576px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
+	}
+}
